<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/textView_movieTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textStyle="bold"
            android:textSize="18dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/placeholder_movie_title"/>

    <ImageView
            android:id="@+id/imageView_moviePoster"
            android:layout_width="154dp"
            android:layout_height="231dp"
            android:background="#CCC"
            android:contentDescription="@string/content_description_movie_poster"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_movieTitle"
            tools:src="@drawable/ic_launcher_background"/>

    <TextView
            android:id="@+id/textView_genreList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView_moviePoster"
            tools:text="@string/placeholder_genre_list"/>

    <TextView
            android:id="@+id/textView_releaseDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_genreList"
            tools:text="@string/placeholder_movie_release_date"/>

    <TextView
            android:id="@+id/textView_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_releaseDate"
            tools:text="@string/placeholder_movie_overview"/>

</android.support.constraint.ConstraintLayout>